[Type checker] Teach areOverrideCompatibleSimple() to look at initializers.

Apply the same is-generic check to initializers that we apply to
functions when establishing basic override compatibility. This is a
simple optimization for master, but fixes a crasher for Swift 3.1.

Fixes SR-4059.